Fixed navbar issue from overflowing

--- a/src/scss/Menu.scss
+++ b/src/scss/Menu.scss
@@ -8,7 +8,7 @@
     background-color: vrs.$prim-color;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3;
 
     .links {
       display: flex;
